@@ -1,16 +1,21 @@
+import java.util.Arrays;
 import java.util.List;
+import java.util.function.Predicate;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 public class Streams {
     public static void main(String[] args) {
-        // Given a List of numbers, use stream to filter, map, and collect results.
 
-        List<Integer> numbers = List.of(1, 2, 3, 4, 5, 6, 7, 8, 9, 10);
+        List<Integer> list = Arrays.asList(1, 5, 3, 8, 9, 4);
 
-        List<Integer> processedNumbers = numbers.stream()
-                                                .filter(num -> num % 2 == 0)
-                                                .collect(Collectors.toList());
+        Predicate<Integer> oddNum = num -> num % 2 != 0;
 
-        System.out.println(processedNumbers);
+        int sum = list.parallelStream()
+                .filter(oddNum)
+                .map(num -> num * 2)
+                .reduce(0, Integer::sum);
+        System.out.println(sum);
+
     }
 }
